--- a/NursingDocumentTracker/MainStoryboard.storyboard
+++ b/NursingDocumentTracker/MainStoryboard.storyboard
@@ -13,7 +13,7 @@
                         <viewControllerLayoutGuide type="bottom" id="UxC-zh-5Ve"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="wzT-nt-4rd">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DFI-Yz-rGm">
@@ -67,7 +67,7 @@
                         <viewControllerLayoutGuide type="bottom" id="k4B-fa-pif"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="MHb-hQ-bKV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nursing Document Tracker" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="312" translatesAutoresizingMaskIntoConstraints="NO" id="voC-lP-UwY">
@@ -134,7 +134,7 @@
                         <viewControllerLayoutGuide type="bottom" id="bfR-B7-aH6"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="wqi-PT-e4b">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hvc-mQ-qjj">
@@ -213,7 +213,7 @@
                         <viewControllerLayoutGuide type="bottom" id="O6s-yl-JmA"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="YIX-r7-gcW">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -232,7 +232,7 @@
                         <viewControllerLayoutGuide type="bottom" id="2bE-9g-A1E"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="sBd-3h-8GB">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -251,7 +251,7 @@
                         <viewControllerLayoutGuide type="bottom" id="4FU-I2-BpN"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="yel-MY-gDd">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -277,7 +277,7 @@
             </objects>
             <point key="canvasLocation" x="961" y="-788"/>
         </scene>
-        <!--Take Image View Controller - Upload-->
+        <!--Take Image View Controller - Take Picture-->
         <scene sceneID="j9g-8s-tbq">
             <objects>
                 <viewController id="yCM-hc-XaA" customClass="NDTTakeImageViewController" sceneMemberID="viewController">
@@ -286,18 +286,25 @@
                         <viewControllerLayoutGuide type="bottom" id="FyU-o5-eRK"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="reW-ZP-zM9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="J7a-OY-BKH">
-                                <rect key="frame" x="0.0" y="64" width="320" height="456"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="225"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Hda-z1-zx3">
+                                <rect key="frame" x="118" y="385" width="84" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Take Picture">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="d6o-iw-hgS"/>
-                    <navigationItem key="navigationItem" title="Upload" id="BHj-0D-ISO">
+                    <navigationItem key="navigationItem" title="Take Picture" id="BHj-0D-ISO">
                         <barButtonItem key="rightBarButtonItem" title="Next" id="gjy-CQ-hku">
                             <connections>
                                 <segue destination="zUd-yr-HdW" kind="push" id="qAw-GI-Vim"/>
@@ -307,6 +314,7 @@
                     <connections>
                         <outlet property="imageView" destination="J7a-OY-BKH" id="DP7-bF-enC"/>
                         <outlet property="nextButton" destination="gjy-CQ-hku" id="bUA-FM-yqR"/>
+                        <outlet property="takeImageButton" destination="Hda-z1-zx3" id="GYh-OZ-TKR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ABN-5z-2rC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -322,7 +330,7 @@
                         <viewControllerLayoutGuide type="bottom" id="Qbr-wc-O17"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="bb9-NY-lxT">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Select Category" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ATW-ca-HYI">
@@ -333,7 +341,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="V3z-mV-Jqi">
-                                <rect key="frame" x="0.0" y="193" width="320" height="162"/>
+                                <rect key="frame" x="0.0" y="162" width="320" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                         </subviews>
@@ -364,7 +372,7 @@
                         <viewControllerLayoutGuide type="bottom" id="La7-3K-6oR"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="q0w-1w-TPH">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -378,6 +386,6 @@
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
 </document>
